--- a/index.html
+++ b/index.html
@@ -6,11 +6,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calc.js - BVin7 Edition</title>
-    <link rel="stylesheet" href="./css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Chakra+Petch:ital,wght@0,400;0,700;1,400;1,700&display=swap"
         rel="stylesheet">
+    <link rel="stylesheet" href="./css/style.css">
+    <script src="./js/script.js" defer></script>
 </head>
 
 <body>
@@ -20,30 +21,30 @@
                 <h1>Calc.js</h1>
                 <h3>BVin7 Edition</h3>
             </div>
-            <button id="switch-theme-button" class="misc-buttons">Switch to light theme</button>
+            <button id="switch-theme-button" class="misc-buttons" type="button">Switch to light theme</button>
             <input id="calculator-screen-input" type="text">
         </section>
         <section class="buttons-container">
-            <button class="calculator-buttons">C</button>
-            <button class="calculator-buttons">(</button>
-            <button class="calculator-buttons">)</button>
-            <button class="calculator-buttons">/</button>
-            <button class="calculator-buttons">7</button>
-            <button class="calculator-buttons">8</button>
-            <button class="calculator-buttons">9</button>
-            <button class="calculator-buttons">*</button>
-            <button class="calculator-buttons">4</button>
-            <button class="calculator-buttons">5</button>
-            <button class="calculator-buttons">6</button>
-            <button class="calculator-buttons">-</button>
-            <button class="calculator-buttons">1</button>
-            <button class="calculator-buttons">2</button>
-            <button class="calculator-buttons">3</button>
-            <button class="calculator-buttons">+</button>
-            <button class="calculator-buttons">0</button>
-            <button class="calculator-buttons">.</button>
-            <button class="calculator-buttons">mod</button>
-            <button class="calculator-buttons">=</button>
+            <button id="clear-all" class="calculator-buttons" type="button">C</button>
+            <button class="calculator-buttons onscreen-buttons" type="button" data-value=" ( ">(</button>
+            <button class="calculator-buttons onscreen-buttons" type="button" data-value=" ) ">)</button>
+            <button class="calculator-buttons onscreen-buttons" type="button" data-value=" / ">/</button>
+            <button class="calculator-buttons onscreen-buttons" type="button" data-value="7">7</button>
+            <button class="calculator-buttons onscreen-buttons" type="button" data-value="8">8</button>
+            <button class="calculator-buttons onscreen-buttons" type="button" data-value="9">9</button>
+            <button class="calculator-buttons onscreen-buttons" type="button" data-value=" * ">*</button>
+            <button class="calculator-buttons onscreen-buttons" type="button" data-value="4">4</button>
+            <button class="calculator-buttons onscreen-buttons" type="button" data-value="5">5</button>
+            <button class="calculator-buttons onscreen-buttons" type="button" data-value="6">6</button>
+            <button class="calculator-buttons onscreen-buttons" type="button" data-value=" - ">-</button>
+            <button class="calculator-buttons onscreen-buttons" type="button" data-value="1">1</button>
+            <button class="calculator-buttons onscreen-buttons" type="button" data-value="2">2</button>
+            <button class="calculator-buttons onscreen-buttons" type="button" data-value="3">3</button>
+            <button class="calculator-buttons onscreen-buttons" type="button" data-value=" + ">+</button>
+            <button class="calculator-buttons onscreen-buttons" type="button" data-value="0">0</button>
+            <button class="calculator-buttons onscreen-buttons" type="button" data-value=".">.</button>
+            <button class="calculator-buttons onscreen-buttons" type="button" data-value="%">mod</button>
+            <button id="equals" class="calculator-buttons" type="button">=</button>
         </section>
         <section class="results-container">
             <button id="copyToClipboardButton" class="misc-buttons">Copy</button>
